[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scene/Buttons/BackButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Options_Menu_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scene/menu/OptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://Scene/menu/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Music/StartGame.wav" type="AudioStream" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 440.0
margin_top = 240.0
margin_right = -440.0
margin_bottom = -240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundLabel" type="Label" parent="OptionsContainer"]
margin_right = 400.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "Sound"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="HSlider" parent="OptionsContainer"]
margin_top = 33.0
margin_right = 400.0
margin_bottom = 49.0
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="OptionsContainer"]
margin_top = 53.0
margin_right = 400.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "Music"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HSlider" parent="OptionsContainer"]
margin_top = 86.0
margin_right = 400.0
margin_bottom = 102.0
min_value = -80.0
max_value = 0.0

[node name="BackButton" parent="OptionsContainer" instance=ExtResource( 1 )]
margin_top = 106.0
margin_bottom = 166.0

[node name="FadeIn" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"
[connection signal="value_changed" from="OptionsContainer/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="OptionsContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
